@@ -4,6 +4,8 @@ BuildingsPy Changelog
 Version 2.2.0, xxx, 2020 -- Release 2.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - xxx
+- For unit tests, set Advanced.GenerateVariableDependencies = false as this can change the set of nonlinear equations
+  (https://github.com/lbl-srg/BuildingsPy/issues/410)
 - For unit tests, ignore zero-size linear and nonlinear equations when comparing statistics
   (https://github.com/lbl-srg/BuildingsPy/issues/406)
 - For unit tests, changed warning to an error if start or end times differ from reference results
